@@ -39,8 +39,9 @@ installation-guide (2008xxxx) UNRELEASED; urgency=medium
     - various minor updates and improvements
   * Remove section on X.Org preseeding as all descibed options are obsolete.
   * Document support in the installer for loading missing firmware.
+  * Update partman preseeding: use Choices-C values instead of descriptions.
 
- -- Frans Pop <fjp@debian.org>  Sat, 04 Oct 2008 16:41:11 +0200
+ -- Frans Pop <fjp@debian.org>  Mon, 06 Oct 2008 00:26:26 +0200
 
 installation-guide (20080520) unstable; urgency=medium
 
